[build-system]
requires = ["flit_core >=3.2,<4"]
build-backend = "flit_core.buildapi"

[project]
name = "labours"
version = "11.0.0"
description = "Gaining advanced insights from Git repository history."
requires-python = ">=3.10"
authors = [
    { "name"="source{d}", "email"="machine-learning@sourced.tech"},
]
readme = "README.md"
packages = [{include = "labours", from = "python" }]

dependencies = [
    "PyYAML>=6.0.0",
    "matplotlib>=1",
    "numpy>=2.0",
    "pandas>=2.2",
    "scipy>=1.6",
    "protobuf>=0",
    "python-dateutil>=0",
    "lifelines>=0",
    "tqdm>=0",
    "munch>=4.0.0",
]

[project.scripts]
labours = 'labours.cli:main'

# labours packages several scripts, for several analysis.
# Some analysis have more dependencies and as such those aren't automatically installed.
# those can be installed with eg `pip install '.[couples]'`
[project.optional-dependencies]
    # deps for `labours -m couples-*` and `labours -m overwrites_matrix`
    couples = [
        "tensorflow>=2.0",
    ]
    # deps for `labours -m devs`
    devs = [
        "hdbscan>=0",
        "seriate>=1.0",
        "fastdtw>=0",
    ]
