[build-system]
requires = ["flit_core >=3.2,<4"]
build-backend = "flit_core.buildapi"

[project]
name = "labours"
version = "11.0.0"
description = "Gaining advanced insights from Git repository history."
requires-python = ">=3.10"
authors = [
    { "name"="source{d}", "email"="machine-learning@sourced.tech"},
]
readme = "README.md"
packages = [{include = "labours", from = "python" }]

dependencies = [
    "PyYAML>=6.0.0",
    "matplotlib>=3,<3.6",
    "numpy>=1.0,<2.0",
    "pandas>=1.4,<2.0",
    "scipy>=1.6,<1.14",
    "protobuf>=0",
    "python-dateutil>=0",
    "lifelines>=0",
    "tqdm>=0",
    "munch>=4.0.0",
]

[project.scripts]
labours = 'labours.cli:main'

# labours packages several scripts, for several analysis.
# Some analysis have more dependencies and as such those aren't automatically installed.
# those can be installed with eg `pip install '.[couples]'`
[project.optional-dependencies]
    # deps for `labours -m couples-*` and `labours -m overwrites_matrix`
    couples = [
        "tensorflow>=2.0",
    ]
    # deps for `labours -m devs`
    devs = [
        "hdbscan>=0",
        "seriate>=1.0",
        "fastdtw>=0",
    ]
